prod/rollout.yaml
apiVersion: argoproj.io/v1alpha1 
kind: Rollout 
metadata:
  labels:
  name: vote
spec:
  replicas: 5
  strategy:
    blueGreen: null 
    canary:
      canaryService: vote-preview
      stableService: vote
      trafficRouting:
        nginx:
          stableIngress: vote
      steps:
        - setCanaryScale:
            replicas: 3
        - setWeight: 20
        - pause: 
           duration: 30s
        - setWeight: 40
        - pause:
           duration: 30s
        - setWeight: 60
        - pause:
           duration: 30s
        - setWeight: 80
        - pause:
           duration: 30s
        - setWeight: 100
