prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote
  namespace: instavote 
spec:
  ingressClassName: nginx 
  rules:
  - host: "vote.example.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: vote 
            port:
              number: 80
